--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -6,11 +6,10 @@
 <meta name="description" content="">
 <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
 <meta name="generator" content="Hugo 0.88.1">
-<title>Flask Authentication - Login page | Bootstrap v5.1</title>
+<title>Authentication - Login page</title>
 
-<!-- CSS only -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="/static/assets/css/custom.css">
+<link rel="stylesheet" href="/assets/css/custom.css">
 
 </head>
 <body>
@@ -21,10 +20,10 @@
             <div class="row align-items-center g-lg-5 py-5">
                 <div class="col-lg-7 text-center text-lg-start">
                     <h1 class="display-4 fw-bold lh-1 mb-3">
-                        Flask Sign IN
+                        Sign In
                     </h1>
                     <p class="col-lg-10 fs-4">
-                        Open-source Flask Sample that showcases login, logout, and registration flow.   
+                        DO NOT TRY TO DO WEIRD THINGS!
                     </p>
                 </div>
                 <div class="col-md-10 mx-auto col-lg-5">
@@ -58,10 +57,10 @@
                                 <input type="checkbox" value="remember-me"> Remember me
                             </label>
                         </div> -->
-                        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign IN</button>
+                        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign In</button>
                         <hr class="my-4">
                         <small class="text-muted">
-                            Dont have an account? <a href="{{ url_for('register') }}" class="text-right">Register</a>
+                            Don't have an account? <a href="{{ url_for('register') }}" class="text-right">Register</a>
                         </small>
                     </form>
                 </div>
