--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -10,7 +10,7 @@
 
 <!-- CSS only -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="/static/assets/css/custom.css">
+<link rel="stylesheet" href="/assets/css/custom.css">
 
 </head>
 <body>
@@ -21,10 +21,10 @@
             <div class="row align-items-center g-lg-5 py-5">
                 <div class="col-lg-7 text-center text-lg-start">
                     <h1 class="display-4 fw-bold lh-1 mb-3">
-                        Flask Sign UP
+                        Sign Up
                     </h1>
                     <p class="col-lg-10 fs-4">
-                        Open-source Flask Sample that showcases login, logout, and registration flow.   
+                        DO NOT TRY TO DO WEIRD THINGS!
                     </p>
                 </div>
                 <div class="col-md-10 mx-auto col-lg-5">
@@ -63,7 +63,7 @@
                                 <input type="checkbox" value="agree-terms"> Agree terms
                             </label>
                         </div> -->
-                        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign UP</button>
+                        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign Up</button>
                         <hr class="my-4">
                         <small class="text-muted">
                             Already have an account? <a href="{{ url_for('login') }}" class="text-right">Login</a>
