--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,11 +18,10 @@
     <main>
 
         <div class="px-4 py-5 my-5 text-center">
-            <img class="d-block mx-auto mb-4" src="/assets/img/bootstrap-logo.svg" alt="" width="72" height="57">
-            <h1 class="display-5 fw-bold">Flask Authentication Sample</h1>
+            <h1 class="display-5 fw-bold">Welcome</h1>
             <div class="col-lg-6 mx-auto">
                 <p class="lead mb-4">
-                    Open-source Flask Sample that showcases login, logout, and registration flow.   
+                    welcome to my authentication system
                 </p>
             
                 {% if current_user.is_authenticated %}
