--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -8,9 +8,8 @@
 <meta name="generator" content="Hugo 0.88.1">
 <title>Flask Authentication - Login page | Bootstrap v5.1</title>
 
-<!-- CSS only -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="/assets/css/custom.css">
+<link rel="stylesheet" href="/static/assets/css/custom.css">
 
 </head>
 <body>
@@ -56,13 +55,17 @@
                             {{ form.password(class="form-control", type="password") }}
                             <label for="floatingPassword">Password</label>
                         </div>
+
+                        {% if success %}
+                            <div class="form-floating mb-3">
+                                <hr class="my-4">
+                                <p class="fw-bold">Google Authenticator QR Code:</p>
+                                <img src="data:image/png;base64, {{ qr_code }}" alt="Google Authenticator QR Code" style="width: 250px; height: 250px;">
+                            </div>
+                        {% endif %}
+
                         <br />
-                        <!--
-                        <div class="checkbox mb-3">
-                            <label>
-                                <input type="checkbox" value="agree-terms"> Agree terms
-                            </label>
-                        </div> -->
+
                         <button class="w-100 btn btn-lg btn-primary" type="submit">Sign Up</button>
                         <hr class="my-4">
                         <small class="text-muted">
@@ -75,7 +78,6 @@
 
     </main>
 
-    <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
       
 </body>
