--- a/app/templates/forgot_password.html
+++ b/app/templates/forgot_password.html
@@ -17,15 +17,6 @@
     <main>
 
         <div class="container col-xl-10 col-xxl-8 px-4 py-5">
-            <div class="row align-items-center g-lg-5 py-5">
-                <div class="col-lg-7 text-center text-lg-start">
-                    <h1 class="display-4 fw-bold lh-1 mb-3">
-                        Sign In
-                    </h1>
-                    <p class="col-lg-10 fs-4">
-                        DO NOT TRY TO DO WEIRD THINGS!
-                    </p>
-                </div>
                 <div class="col-md-10 mx-auto col-lg-5">
 
                     <form method="post" action="" class="p-4 p-md-5 border rounded-3 bg-light">
@@ -36,8 +27,8 @@
                             {% if msg %}
                                 {{ msg | safe }}
                             {% else %}
-                                Add your credentials
-                            {% endif %}                                  
+                                Retrieve Your Password
+                            {% endif %}
                         </p>
 
                         <br />
@@ -48,31 +39,19 @@
                         </div>
 
                         <div class="form-floating mb-3">
-                            {{ form.password(class="form-control", type="password") }}
-                            <label for="floatingPassword">Password</label>
+                            {{ form.email(class="form-control") }}
+                            <label for="floatingPassword">Email</label>
                         </div>
                         <br />
 
-                        <div class="form-floating mb-3">
-                            {{ form.totp_code(class="form-control") }}
-                            <label for="floatingInput">Google Authenticator Code</label>
-                        </div>
-
-                        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign In</button>
-                        <hr class="my-4">
-                        <small class="text-muted">
-                            Don't have an account? <a href="{{ url_for('register') }}" class="text-right">Register</a>
-                            Forgot your password? <a href="{{ url_for('forgot') }}" class="text-right">Retrieve</a>
-                        </small>
+                        <button class="w-100 btn btn-lg btn-primary" type="submit">Confirm</button>
                     </form>
                 </div>
-            </div>
         </div>
 
     </main>
 
-    <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
-      
+
 </body>
 </html>
